2005-11-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac: back to HEAD

=== release 0.9.6 ===

2005-11-23  Thomas Vander Stichele <thomas at apestaart dot org>

	* configure.ac:
	  releasing 0.9.6, "White Eight"

2005-11-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* check/pipelines/simple_launch_lines.c: (GST_START_TEST):
	* docs/plugins/inspect/plugin-sine.xml:
	  remove sinesrc some more

2005-11-23  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstringbuffer.c: (gst_ring_buffer_read):
	If we are reading too slowly, jump forward in the ringbuffer
	instead of blocking.

2005-11-23  Jan Schmidt  <thaytan@mad.scientist.com>

	* ext/libvisual/visual.c: (gst_visual_src_setcaps), (get_buffer),
	(gst_visual_chain):
	* ext/theora/theoraenc.c: (theora_enc_sink_setcaps):
	* gst/videorate/gstvideorate.c: (gst_videorate_setcaps),
	(gst_videorate_chain):
	* gst/videotestsrc/gstvideotestsrc.c:
	(gst_videotestsrc_src_fixate), (gst_videotestsrc_create):
	* sys/v4l/gstv4lmjpegsrc.c: (gst_v4lmjpegsrc_get_fps),
	(gst_v4lmjpegsrc_src_convert), (gst_v4lmjpegsrc_src_query),
	(gst_v4lmjpegsrc_get), (gst_v4lmjpegsrc_getcaps):
	* sys/v4l/v4lsrc_calls.c: (gst_v4lsrc_get_fps),
	(gst_v4lsrc_get_fps_list), (gst_v4lsrc_buffer_new):
	  Updates for API changes

2005-11-23  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_class_init), (gst_base_audio_sink_set_clock),
	(gst_base_audio_sink_render), (gst_base_audio_sink_change_state):
	Fix for calibration API change.

2005-11-23  Michael Smith <msmith@fluendo.com>

	* gst-libs/gst/audio/multichannel.c:
	(gst_audio_get_channel_positions),
	(gst_audio_set_channel_positions),
	(gst_audio_set_structure_channel_positions_list),
	(gst_audio_fixate_channel_positions):
	  Use gst_value_array_*() functions on value arrays, not
	  gst_value_list_*().

2005-11-23  Edward Hervey  <edward@fluendo.com>

	* autogen.sh: